--- a/Spark_ML_Prediction.ipynb
+++ b/Spark_ML_Prediction.ipynb
@@ -4,11 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spark Scala ML\n",
+    "# Spark_ML_Prediction\n",
     "\n",
     "* CA Housing Data Set\n",
-    "* Spark vs 2.4.4\n",
-    "* Recreate examples from Learning Spark "
+    "* Spark EMR Notebok on Spark 2.4.4\n",
+    "* Recreate examples from Learning Spark 2nd Edition, Chapter 10 \n",
+    "  * https://www.oreilly.com/library/view/learning-spark-2nd/9781492050032/\n",
+    "  * Spark version 3.0 ... ML examples were converted to Spark 2.4.4"
    ]
   },
   {
