--- a/Spark_ML_Prediction.ipynb
+++ b/Spark_ML_Prediction.ipynb
@@ -11,7 +11,8 @@
     "* Recreate examples from Learning Spark 2nd Edition, Chapter 10 \n",
     "  * https://www.oreilly.com/library/view/learning-spark-2nd/9781492050032/\n",
     "  * Spark version 3.0 ... ML examples were converted to Spark 2.4.4\n",
-    "  * Use dat"
+    "  * Use publically available dataset rather then AirBnb dataset from chapter 10\n",
+    "  * Ch 10 dataset is available when signup for a Databricks notebook ... so use public dataset"
    ]
   },
   {
