modify comment on linear prediction

--- a/Spark_ML_Prediction.ipynb
+++ b/Spark_ML_Prediction.ipynb
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These features should go through a scaler ... the example from book did not do so, should be able to add it fairly simply"
+    "Since only have one feature, its not necesary to go through a feature tandardization phase"
    ]
   },
   {
