--- a/Spark_ML_Prediction.ipynb
+++ b/Spark_ML_Prediction.ipynb
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since only have one feature, its not necesary to go through a feature tandardization phase"
+    "Since only have one feature, its not necesary to go through a feature standardization phase"
    ]
   },
   {
